<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/dimens_100dp"
                android:layout_height="@dimen/dimens_100dp"
                android:layout_margin="@dimen/dimens_20dp"
                android:src="@drawable/user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:layout_marginBottom="@dimen/dimens_5dp"
                android:text="@string/asykur_khamid"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvGender"
                app:layout_constraintLeft_toRightOf="@+id/imgProfile" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:text="@string/male"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imgProfile"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:text="@string/_085640490025"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toRightOf="@+id/imgProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>